# librm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  LICENCE  README.md  README_en.md  ahrs__interface_8h.html  ahrs__interface_8h_source.html  annotated.html  annotated_dup.js  bmi088_8cc.html  bmi088_8h.html  bmi088_8h.js  bmi088_8h_source.html  bmi088__const_8hpp.html  bmi088__const_8hpp.js  bmi088__const_8hpp_source.html  bsp_8cc.html  bsp_8h.html  bsp_8h.js  bsp_8h_source.html  bsp__buzzer_8cc.html  bsp__buzzer_8h.html  bsp__buzzer_8h_source.html  bsp__can_8cc.html  bsp__can_8h.html  bsp__can_8h_source.html  bsp__can__interface_8h.html  bsp__can__interface_8h_source.html  bsp__dbus_8cc.html  bsp__dbus_8h.html  bsp__dbus_8h_source.html  bsp__delay_8cc.html  bsp__delay_8cc.js  bsp__delay_8cpp.html  bsp__delay_8h.html  bsp__delay_8h.js  (+961 more)
.github/workflows/: build.yml  ci_build.yml  ci_build_pr_merge.yml  ci_style_lint.yml  doxygen-gh-pages.yml  lint.yml  style_check.yml
build_template/stm32f407ighx/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F407IGHX_FLASH.ld  STM32F407IGHX_RAM.ld  build_template.ioc
build_template/stm32f407ighx/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
build_template/stm32f407ighx/Src/: can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
build_template/stm32h723vgtx/: .cproject  .mxproject  .project  CMakeLists.txt  STM32H723VGTX_FLASH.ld  STM32H723VGTX_RAM.ld  build_template.ioc
cmake/: check_cpp_std.cmake  detect_platform.cmake
examples/: gm6020.cc  gm6020.cpp
examples/basic/: GM6020位置控制.md  c板姿态解算.md
framework/bsp/: bsp.cc  bsp.h
framework/bsp/dji_devboard_c/: bsp_buzzer.cc  bsp_buzzer.h  bsp_dbus.cc  bsp_dbus.h  bsp_delay.cc  bsp_delay.h  bsp_ins.cc  bsp_ins.h  bsp_led.cc  bsp_led.h
framework/bsp/interface/: bsp_can_interface.h  bsp_delay_interface.h  bsp_ins_interface.h
framework/bsp/ycmc_h7a/: bsp_delay.cpp  bsp_delay.h
framework/components/rc/: remote_control.cc  remote_control.h
framework/hal_wrapper/: can_device.cc  can_device.h  dsp.h  hal.h  hal_can.cc  hal_can.h  hal_config.h  hal_spi.cc  hal_spi.h  hal_uart.cc  hal_uart.h  spi_device.cc  spi_device.h
framework/modules/: pubsub.hpp  serial_plotter.hpp  serial_plotter_socket.hpp  typedefs.h
framework/modules/exception/: exception.cc  exception.h
framework/modules/exceptions/: exceptions.cc  exceptions.h
libs/: CMakeLists.txt
libs/eigen/: CMakeLists.txt
libs/nanopb/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+102 more)
src/: CMakeLists.txt  irobotec.hpp  librm.hpp
src/bsp/: bsp.cc  bsp.h
src/bsp/common/: bsp_uart.cc  bsp_uart.h  can_device.cc  can_device.h  can_device.hpp
src/bsp/dji_devboard_c/: bsp_buzzer.cc  bsp_buzzer.h  bsp_can.cc  bsp_can.h  bsp_delay.cc  bsp_delay.h  bsp_ins.cc  bsp_ins.h  bsp_led.cc  bsp_led.h
src/bsp/interface/: bsp_can_interface.h  bsp_delay_interface.h  bsp_ins_interface.h
src/bsp/ycmc_h7a/: bsp_delay.cpp  bsp_delay.h
src/components/motor/: dji_motor.cc  dji_motor.h  dji_motor.hpp  unitree_motor.cc  unitree_motor.h
src/components/rc/: dr16.cc  dr16.h  remote_control.cc  remote_control.h
src/components/supercap/: supercap.cc  supercap.h
src/core/: exception.cc  exception.h  time.cc  time.h  typedefs.h
src/device/: can_device.hpp  device.cc  device.h
src/device/actuator/: dji_motor.cc  dji_motor.hpp  unitree_motor.cc  unitree_motor.h
src/device/motor/: dji_motor.cc  dji_motor.hpp  unitree_motor.cc  unitree_motor.h
src/device/remote/: dr16.cc  dr16.h
src/device/supercap/: supercap.cc  supercap.h
src/hal/: bxcan.cc  bxcan.h  can.h  can_device.cc  can_device.h  can_device.hpp  can_interface.h  dsp.h  fdcan.cc  fdcan.h  hal.h  i2c_device.cc  i2c_device.h  spi_device.cc  spi_device.h  uart.cc  uart.h
src/hal_wrapper/: can_device.cc  can_device.h  dsp.h  hal.h  i2c_device.cc  i2c_device.h  spi_device.cc  spi_device.h
src/irobotec/: CMakeLists.txt
src/irobotec/core/: exception.cc  exception.h  freertos.h  thread_pool.hpp  time.cc  time.h  time.hpp  typedefs.h
src/irobotec/device/: can_device.hpp  device.cc  device.h
src/irobotec/device/actuator/: dji_motor.cc  dji_motor.hpp  dm_motor.hpp  unitree_motor.cc  unitree_motor.h
src/irobotec/device/remote/: dr16.cc  dr16.h
src/irobotec/device/sensor/: bmi088.cc  bmi088.h  bmi088_const.hpp  ist8310.cc  ist8310.h  ist8310_const.hpp
src/irobotec/device/sensor/bmi088/: bmi088.cc  bmi088.h  bmi088_const.hpp
src/irobotec/device/sensor/ist8310/: ist8310.cc  ist8310.h  ist8310_const.hpp
src/irobotec/device/supercap/: supercap.cc  supercap.h
src/irobotec/hal/: can.h  can_interface.h  gpio.h  gpio_interface.h  hal.h  serial.h  serial_interface.h  spi.h  spi_interface.h  uart.h  uart_interface.h
src/irobotec/hal/linux/: serial.cc  serial.h  socketcan.cc  socketcan.h
src/irobotec/hal/stm32/: bxcan.cc  bxcan.h  check_register_callbacks.h  fdcan.cc  fdcan.h  gpio.cc  gpio.h  hal.h  i2c_device.cc  i2c_device.h  spi.cc  spi.h  spi_device.cc  spi_device.h  uart.cc  uart.h
src/irobotec/modules/: dsp.h  freertos.h  vofa_plotter.hpp
src/irobotec/modules/algorithm/: chassis_fkik.cc  chassis_fkik.h  crc.cc  crc.h  mahony_ahrs.cc  mahony_ahrs.h  mecanum.cc  mecanum.h  pid.cc  pid.h  utils.cc  utils.hpp
src/irobotec/modules/algorithm/ahrs/: ahrs_interface.h  ekf.cc  ekf.h  mahony.cc  mahony.h
src/librm/: CMakeLists.txt
src/librm/core/: cmsis_rtos.h  exception.h  freertos.h  thread_pool.hpp  time.hpp  typedefs.h
src/modules/: dsp.h  exception.cc  exception.h  freertos.h  pubsub.hpp  serial_plotter.hpp  time.cc  time.h  typedefs.h  vofa_plotter.hpp
(+132 files in other folders)
